--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>React-Typescript!</title>
+        <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=default,fetch,es6"></script>
         <link rel="stylesheet" href="./dist/style.css"></link>
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
     </head>
@@ -15,5 +16,6 @@
 
         <!-- Main -->
         <script src="./dist/bundle.js"></script>
+
     </body>
 </html>
